# StudyRender

./: .gitignore  CMakeLists.txt  build64.bat
src/: geometry.h  model.cpp  model.h  tgaimage.h
test/: test_face.cpp  test_line.cpp
